--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=Arduino ST7789 Library
+name=Arduino_ST7789 Library
 version=0.9.5
 author=Ananev Ilya
 maintainer=Ananev Ilya <ananevilya@gmail.com>
